--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -270,26 +270,26 @@
 
                                         <!-- Cajas de Texto -->
 
-                                        <p:inputText id="VCargoDesempeñado" style="position: absolute; left: 45px; top: 30px; width: 210px;" readonly="true" value="#{controlRemoto.vwActualesCargos.cargo.nombre}"  /> 
-                                        <p:inputText id="VFechaContratacion" style="position: absolute; left: 45px; top: 66px; width: 210px;  " readonly="true" value="Fecha: #{controlRemoto.fechaActualesTiposContratos} - #{controlRemoto.vwActualesTiposContratos.tipoContrato.nombre}"/>
-                                        <p:inputText id="VNormaLaboral" style="position: absolute; left: 45px; top: 101px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesNormasEmpleados.normaLaboral.nombre}" />
-                                        <p:inputText id="VAfiliaciones" style="position: absolute; left: 45px; top: 137px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesAfiliacionesSalud.tiposEntidades.nombre} - #{controlRemoto.vwActualesAfiliacionesSalud.tercerosSucursales.tercero.nombre} - #{controlRemoto.vwActualesAfiliacionesPension.tiposEntidades.nombre} - #{controlRemoto.vwActualesAfiliacionesPension.tercerosSucursales.tercero.nombre}" />
-                                        <p:inputText id="VIBC" style="position: absolute; left: 45px; top: 173px; width: 210px;  "  />
-                                        <p:inputText id="VTipoViajero" style="position: absolute; left: 45px; top: 208px; width: 210px;  "  readonly="true" value="#{controlRemoto.vwActualesVigenciasViajeros.tipoViajero.nombre}"/>
+                                        <p:inputText id="VCargoDesempeñado" style="position: absolute; left: 45px; top: 30px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesCargos.cargo.nombre}"  /> 
+                                        <p:inputText id="VFechaContratacion" style="position: absolute; left: 45px; top: 66px; width: 210px; height: 12px; " readonly="true" value="Fecha: #{controlRemoto.fechaActualesTiposContratos} - #{controlRemoto.vwActualesTiposContratos.tipoContrato.nombre}"/>
+                                        <p:inputText id="VNormaLaboral" style="position: absolute; left: 45px; top: 101px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesNormasEmpleados.normaLaboral.nombre}" />
+                                        <p:inputText id="VAfiliaciones" style="position: absolute; left: 45px; top: 137px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesAfiliacionesSalud.tiposEntidades.nombre} - #{controlRemoto.vwActualesAfiliacionesSalud.tercerosSucursales.tercero.nombre} - #{controlRemoto.vwActualesAfiliacionesPension.tiposEntidades.nombre} - #{controlRemoto.vwActualesAfiliacionesPension.tercerosSucursales.tercero.nombre}" />
+                                        <p:inputText id="VIBC" style="position: absolute; left: 45px; top: 173px; width: 210px; height: 12px;"  />
+                                        <p:inputText id="VTipoViajero" style="position: absolute; left: 45px; top: 208px; width: 210px; height: 12px;"  readonly="true" value="#{controlRemoto.vwActualesVigenciasViajeros.tipoViajero.nombre}"/>
 
-                                        <p:inputText id="VCentroDeCosto" style="position: absolute; left: 315px; top: 30px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesLocalizaciones.localizacion.centrocosto.codigo} - #{controlRemoto.vwActualesLocalizaciones.localizacion.nombre}"  />
-                                        <p:inputText id="VTipoTrabajador" style="position: absolute; left: 315px; top: 66px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesTiposTrabajadores.tipoTrabajador.nombre}" />
-                                        <p:inputText id="VLegislacionLaboral" style="position: absolute; left: 315px; top: 101px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesContratos.contrato.descripcion}" />
-                                        <p:inputText id="VJornada" style="position: absolute; left: 315px; top: 137px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesJornadas.jornadaTrabajo.descripcion}"  />
-                                        <p:inputText id="VMenorValorRetencio" style="position: absolute; left: 315px; top: 173px; width: 210px;  "  />
-                                        <p:inputText id="VVacaciones" style="position: absolute; left: 315px; top: 208px; width: 210px;  "  />
+                                        <p:inputText id="VCentroDeCosto" style="position: absolute; left: 315px; top: 30px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesLocalizaciones.localizacion.centrocosto.codigo} - #{controlRemoto.vwActualesLocalizaciones.localizacion.nombre}"  />
+                                        <p:inputText id="VTipoTrabajador" style="position: absolute; left: 315px; top: 66px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesTiposTrabajadores.tipoTrabajador.nombre}" />
+                                        <p:inputText id="VLegislacionLaboral" style="position: absolute; left: 315px; top: 101px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesContratos.contrato.descripcion}" />
+                                        <p:inputText id="VJornada" style="position: absolute; left: 315px; top: 137px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesJornadas.jornadaTrabajo.descripcion}"  />
+                                        <p:inputText id="VMenorValorRetencio" style="position: absolute; left: 315px; top: 173px; width: 210px; height: 12px;"  />
+                                        <p:inputText id="VVacaciones" style="position: absolute; left: 315px; top: 208px; width: 210px; height: 12px;"  />
 
-                                        <p:inputText id="VSueldo" style="position: absolute; left: 585px; top: 30px; width: 210px;  " readonly="true" value="#{controlRemoto.sueldo}"/>
-                                        <p:inputText id="VTipoSalario" style="position: absolute; left: 585px; top: 66px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesReformasLaborales.reformaLaboral.nombre}" />
-                                        <p:inputText id="VUbicacion" style="position: absolute; left: 585px; top: 101px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesUbicaciones.ubicacion.descripcion} #{controlRemoto.vwActualesUbicaciones.ubicacion.ciudad.nombre}" />
-                                        <p:inputText id="VFormaDePago" style="position: absolute; left: 585px; top: 137px; width: 210px;  " readonly="true" value="#{controlRemoto.vwActualesFormasPagos.formaPago.nombre}" />
-                                        <p:inputText id="VSET" style="position: absolute; left: 585px; top: 173px; width: 210px;  "  />
-                                        <p:inputText id="VComprobantes" style="position: absolute; left: 585px; top: 208px; width: 210px;  "  />
+                                        <p:inputText id="VSueldo" style="position: absolute; left: 585px; top: 30px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.sueldo}"/>
+                                        <p:inputText id="VTipoSalario" style="position: absolute; left: 585px; top: 66px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesReformasLaborales.reformaLaboral.nombre}" />
+                                        <p:inputText id="VUbicacion" style="position: absolute; left: 585px; top: 101px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesUbicaciones.ubicacion.descripcion} #{controlRemoto.vwActualesUbicaciones.ubicacion.ciudad.nombre}" />
+                                        <p:inputText id="VFormaDePago" style="position: absolute; left: 585px; top: 137px; width: 210px; height: 12px;" readonly="true" value="#{controlRemoto.vwActualesFormasPagos.formaPago.nombre}" />
+                                        <p:inputText id="VSET" style="position: absolute; left: 585px; top: 173px; width: 210px; height: 12px;"  />
+                                        <p:inputText id="VComprobantes" style="position: absolute; left: 585px; top: 208px; width: 210px; height: 12px;"  />
                                     </fieldset>
 
 
