--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -14,7 +14,11 @@
         <h:form id="form">
             <p:panel id="PanelTotal" header="PRUEBAS" style=" font-size: 13px; position: absolute; width: 874px; height: 530px;" >
                 <h:form id="form">
-                    <p:commandButton value="Generar Reporte" actionListener="#{controlPruebasUnitarias.crearReporte()}"/>
+                    <p:commandButton value="PDF" actionListener="#{controlPruebasUnitarias.crearReportePDF()}"/>
+                    <p:commandButton value="XLSX" actionListener="#{controlPruebasUnitarias.crearReporteXLSX()}"/>
+                    <p:commandButton value="XLS Solo datos" actionListener="#{controlPruebasUnitarias.crearReporteXLS()}"/>
+                    <p:commandButton value="CVS" actionListener="#{controlPruebasUnitarias.crearReporteCSV()}"/>
+                    <p:commandButton value="HTML" actionListener="#{controlPruebasUnitarias.crearReporteHTML()}"/>
                 </h:form>
             </p:panel>
         </h:form>
